--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
     <header>
         <div class="header-content">
             <div class="header-content-inner">
-                <h1 id="homeHeading"> My Names Joel Cruz </h1>
-                <h2> And I Make Things </h2>
-                <button href="#about" class="btn btn-primary btn-xl page-scroll"> Find Out More </button>
+                <h1 id="homeHeading"> I'm Joel Cruz </h1>
+                <h2 style="font-style:italic;"> Coder & Designer </h2>
+                <a href="#about" class="btn btn-primary btn-xl page-scroll"> Find Out More </a>
             </div>
         </div>
     </header>
@@ -64,6 +64,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
+                    <img src="assets/img/self_portrait.jpg" class="self-portrait" alt="self-portrait">
                     <h2 class="section-heading">About Me</h2>
                     <hr class="primary">
                 </div>
@@ -81,8 +82,8 @@
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
                         <img class="img-icon sr-icons" src="assets/img/icon-education.png" alt="">
-                        <h3>Umass Lowell</h3>
-                        <p class="text-muted">A proud graduate of University of Massachussets Lowell.</p>
+                        <h3>Education</h3>
+                        <p class="text-muted">A proud graduate of The University of Massachusetts Lowell and Northern Essex Community College.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
@@ -103,10 +104,15 @@
         </div>
     </section>
     <section class="bg-dark" id="portfolio">
+        <div class="portfolio-heading">
+            <h1>Portfolio</h1>
+            <h4>Some of My Work</h4>
+            <hr>
+        </div>
         <div class="container-fluid">
-            <div class="row no-gutter popup-gallery">
+            <div class="row no-gutter">
                 <div class="col-lg-4 col-sm-6">
-                    <a href="https://github.com/joel24478/Samurai-GUI" class="portfolio-box">
+                    <a href="https://joel24478.github.io/Samurai-GUI/" class="portfolio-box">
                         <img src="assets/img/portfolio/1.png" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
@@ -206,7 +212,7 @@
                     <hr class="primary">
                     <p>If you have any questions feel free to contact me. If you wanna see more of my work then check out my GitHub account.</p>
                 </div>
-                <div class="col-lg-4 col-lg-offset-2 text-center">
+                <div class="col-lg-4 text-center">
                     <i class="fa fa-envelope fa-3x sr-contact"></i>
                     <p>
                         <a href="mailto:joel24478@gmail.com">joel24478@gmail.com</a></p>
@@ -214,6 +220,10 @@
                 <div class="col-lg-4 text-center">
                     <i class="fa fa-github fa-3x sr-contact"></i>
                     <p><a href="https://github.com/joel24478">My GitHub</a></p>
+                </div>
+                <div class="col-lg-4 text-center">
+                    <i class="fa fa-linkedin-square fa-3x sr-contact"></i>
+                    <p><a href="https://www.linkedin.com/in/joel-cruz-93229670">LinkedIn</a></p>
                 </div>
             </div>
         </div>
