--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                     </div>
                 </div>
             </div>
-            <a href="www.joelcruz.io/about" class="btn btn-primary btn-xl page-scroll"> Find Out More </a>
+            <a href="about" class="btn btn-primary btn-xl page-scroll"> Find Out More </a>
         </div>
     </section>
     <section class="bg-dark" id="portfolio">
